--- a/W7D1_dollar_store/package.json
+++ b/W7D1_dollar_store/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react": "^6.11.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-redux": "^5.0.7",
     "redux": "^3.5.2",
     "webpack": "^2.2.1"
   }
